force-app/main/default/objects/Market_Event__c/fields/AffectedInstruments__c.field-meta.xml
<CustomField>
    <fullName>AffectedInstruments__c</fullName>
    <label>Affected Instruments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>