force-app/main/default/objects/Market_Event__c/fields/Event_Processed_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Processed_Time__c</fullName>
    <label>Event Processed Time</label>
    <type>DateTime</type>
</CustomField>