force-app/main/default/objects/Market_Event__c/fields/High_Count__c.field-meta.xml
<CustomField>
    <fullName>High_Count__c</fullName>
    <label>High Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>