force-app/main/default/objects/Market_Event__c/fields/Impact_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Impact_Percentage__c</fullName>
    <label>Impact Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>