force-app/main/default/objects/Market_Event__c/fields/Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Impact_Score__c</fullName>
    <label>Impact Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>