force-app/main/default/objects/Market_Event__c/fields/Medium_Count__c.field-meta.xml
<CustomField>
    <fullName>Medium_Count__c</fullName>
    <label>Medium Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>