force-app/main/default/objects/Market_Event__c/fields/News_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>News_Suggestion__c</fullName>
    <label>News Suggestion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>