force-app/main/default/objects/Market_Event__c/fields/News_Summary__c.field-meta.xml
<CustomField>
    <fullName>News_Summary__c</fullName>
    <label>News Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>