force-app/main/default/objects/Market_Event__c/fields/News_Title__c.field-meta.xml
<CustomField>
    <fullName>News_Title__c</fullName>
    <label>News Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>