force-app/main/default/objects/Market_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Processed_Time__c</columns>
    <columns>Sentiment__c</columns>
    <columns>EventDate__c</columns>
    <columns>Impact_Level__c</columns>
    <columns>Impact_Percentage__c</columns>
    <columns>Industry__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>