force-app/main/default/objects/Market_Event__c/listViews/Market_Agent_Market_Event.listView-meta.xml
<ListView>
    <fullName>Market_Agent_Market_Event</fullName>
    <filterScope>Queue</filterScope>
    <label>Market Agent</label>
    <queue>Market_Agent</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>